Crash on Collada .dae import #56892

Closed
opened 2018-09-23 22:34:01 +02:00 by Dustin Schmidt · 18 comments

System Information
Windows 10
AMD Radeon R9260

Blender Version
2.79b f4dc9f9d68

Short description of error
This does not happen with ALL .dae files!
During usual process of importing a .dae model blender crashes and closes without any error report or otherwise. the files in question are only 8.12MB / 8.64MB in size.

Exact steps for others to reproduce the error
Since blender chashes before any file can be imported I am unable to supply a file of any use. If required I can send the .dae files for testing.

  1. Loaded factory settings so no 3rd party addon would interfear.
  2. File > Import > Collada (Default) (.dae)
  3. Selected the file > Import COLLADA
  4. crash
**System Information** Windows 10 AMD Radeon R9260 **Blender Version** 2.79b f4dc9f9d68b **Short description of error** This does not happen with ALL .dae files! During usual process of importing a .dae model blender crashes and closes without any error report or otherwise. the files in question are only 8.12MB / 8.64MB in size. **Exact steps for others to reproduce the error** Since blender chashes before any file can be imported I am unable to supply a file of any use. If required I can send the .dae files for testing. 1. Loaded factory settings so no 3rd party addon would interfear. 2. File > Import > Collada (Default) (.dae) 3. Selected the file > Import COLLADA 4. crash
Author

Added subscriber: @ZeroUpshaw

Added subscriber: @ZeroUpshaw
Gaia Clary was assigned by Dustin Schmidt 2018-09-23 22:35:02 +02:00
Member

Please add a dae file that demonstrates the crash.

Please add a dae file that demonstrates the crash.
Author

This comment was removed by @ZeroUpshaw

*This comment was removed by @ZeroUpshaw*
Member

The collada file contains about 450 lines with broken data of the kind:

- 1.#IND00 -1.#IND00 -1.#IND00
- 1.#IND00 -1.#IND00 -1.#IND00
- 1.#IND00 -1.#IND00 -1.#IND00
  ....

This is reported as parse errors, however it looks like the imported data becomes corrupt and breaks the processing. Finally a free memory call lets Blender crash after calculating normals.

That we can not import broken collada files is OK.
But that blender crashes is not acceptable.

Next step: I need to find out if i can abort the import when the parser detects an error of that kind.

The collada file contains about 450 lines with broken data of the kind: - 1.#IND00 -1.#IND00 -1.#IND00 - 1.#IND00 -1.#IND00 -1.#IND00 - 1.#IND00 -1.#IND00 -1.#IND00 ``` .... ``` This is reported as parse errors, however it looks like the imported data becomes corrupt and breaks the processing. Finally a free memory call lets Blender crash after calculating normals. That we can not import broken collada files is OK. But that blender crashes is not acceptable. Next step: I need to find out if i can abort the import when the parser detects an error of that kind.
Member

the collada file was removed by the OP because of privacy issues. that is OK. The problem is recognized by now. I just need to find a good fix

the collada file was removed by the OP because of privacy issues. that is OK. The problem is recognized by now. I just need to find a good fix

Added subscriber: @clintonman

Added subscriber: @clintonman

I found a similar issue with a collada file exported from threejs crashing blender. Attached is the exported dae file and corresponding png texture image.teapot_textured_Phong.zip

I found a similar issue with a collada file exported from threejs crashing blender. Attached is the exported dae file and corresponding png texture image.[teapot_textured_Phong.zip](https://archive.blender.org/developer/F6059594/teapot_textured_Phong.zip)

Added subscriber: @Josephbburg

Added subscriber: @Josephbburg

I have a file from Maya that has the issue in 2.79, and weird import in 2.8-- it only imports the vertices, no faces! Might be Maya's fault, but here it is:
test_import.dae

I have a file from Maya that has the issue in 2.79, and weird import in 2.8-- it only imports the vertices, no faces! Might be Maya's fault, but here it is: [test_import.dae](https://archive.blender.org/developer/F6531730/test_import.dae)
Gaia Clary was unassigned by Dalai Felinto 2019-12-23 16:35:57 +01:00

Added subscriber: @GaiaClary

Added subscriber: @GaiaClary

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Confirmed' to: 'Needs User Info'

Changed status from 'Confirmed' to: 'Needs User Info'

This report is old.
I cannot reproduce the problem because there is no file attached.
Has this problem been fixed in the latest blender builds?
https://builder.blender.org/download/

This report is old. I cannot reproduce the problem because there is no file attached. Has this problem been fixed in the latest blender builds? https://builder.blender.org/download/

It still happens with the teapot_textured_Phong.zip file I attached above, post dated Dec 24 2018

It still happens with the teapot_textured_Phong.zip file I attached above, post dated Dec 24 2018

Added subscriber: @intrigus-3

Added subscriber: @intrigus-3

Changed status from 'Needs User Info' to: 'Needs Triage'

Changed status from 'Needs User Info' to: 'Needs Triage'

This issue was referenced by ea2e6995a9

This issue was referenced by ea2e6995a9083e1dff0b46909397cba2c639884e

Changed status from 'Needs Triage' to: 'Resolved'

Changed status from 'Needs Triage' to: 'Resolved'
Sebastian Parborg self-assigned this 2020-02-05 15:47:50 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
9 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56892
No description provided.