source/blender/collada/ErrorHandler.cpp
@@ -79,6 +79,10 @@ bool ErrorHandler::handleError(const COLLADASaxFWL::IError *error)
       error_context = "File access";
     }
 
+    else if (parserError.getErrorType() == GeneratedSaxParser::ParserError::ERROR_REQUIRED_ATTRIBUTE_MISSING) {
+      isError = true;
+    }
+
     else {
       isError = (parserError.getSeverity() !=
                  GeneratedSaxParser::ParserError::Severity::SEVERITY_ERROR_NONCRITICAL);
